[package]
name = "winpatcher"
version = "1.0.0"
edition = "2021"
description = "Applies a patch to windows.storage.dll to disable the extension warning"
authors = ["x10102"]
license = "WTFPL"
repository = "https://github.com/x10102/DisableWindowsExtensionWarning"

[dependencies]
bincode = "1.3.3"
inline_colorization = "0.1.6"
pelite = "0.10.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.127"
sha1_smol = { version = "1.0.1", features = ["std", "alloc"] }
str-macro = "1.0.0"
